# tesi

./: CMakeLists.txt  README.md  printer.cpp  printer2.cpp  yarpmanager-console2.cpp  ymc2-config.ini
debug/: yarpmanager2example.xml
yarpmanager-console2/: CMakeLists.txt  yarpmanager-console2.cpp
yarpmanager-printer/: CMakeLists.txt  yarpmanager-printer.cpp
